сделал 2 справочнка, сотрудники и суды

--- a/AISLTP/Views/Court/Index.cshtml
+++ b/AISLTP/Views/Court/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
-    ViewBag.Title = "Информация о сотрудниках";
+    ViewBag.Title = "Информация о судах";
 }
 
-<h2>Информация о сотрудниках</h2>
+<h2>Информация о судах</h2>
 <div>
     <table id="jqGrid"></table>
     <div id="jqControls"></div>
@@ -13,5 +13,5 @@
 <script src="~/Scripts/jquery-1.10.2.js"></script>
 <script src="~/Scripts/i18n/grid.locale-ru.js"></script>
 <script src="~/Scripts/jquery.jqGrid.min.js"></script>
-<script src="~/Scripts/Sp/Sotrscript.js"></script>
+<script src="~/Scripts/Sp/Courtscript.js"></script>
 }
