--- a/AISLTP/Views/Sotr/Index.cshtml
+++ b/AISLTP/Views/Sotr/Index.cshtml
@@ -13,5 +13,5 @@
 <script src="~/Scripts/jquery-1.10.2.js"></script>
 <script src="~/Scripts/i18n/grid.locale-ru.js"></script>
 <script src="~/Scripts/jquery.jqGrid.min.js"></script>
-<script src="~/Scripts/Sp/Sotrscript.js"></script>
+<script src="~/Scripts/script.js"></script>
 }
