--- a/AISLTP/Views/Sp/Index.cshtml
+++ b/AISLTP/Views/Sp/Index.cshtml
@@ -89,7 +89,7 @@
     </li>
     <li>
         <div class="alert alert-success">
-            <span class="alert-link"> @Html.ActionLink( "Справочник судов" , "Index" , "Court" )</span>
+            <span class="alert-link"> @Html.ActionLink( "Справочник судов" , "Index" , "Sp_court" )</span>
         </div>
     </li>
     <li>
