Сделано Сотрудник, Суд, делаю Лицо

--- a/AISLTP/Views/Home/Index.cshtml
+++ b/AISLTP/Views/Home/Index.cshtml
@@ -1,4 +1,12 @@
 ﻿@{
     ViewBag.Title = "";
 }
-
+<br />
+<div class="row">
+    <div class="col h3 text-center" style="width: 100%">
+        Добро пожаловать на ресурс автоматизированной информационной системы
+    </div>
+    <div class="col h3 text-center" style="width: 100%">
+        Лечебно-трудового профилактория
+    </div>
+</div>
