--- a/AISLTP/Views/Sp/Index.cshtml
+++ b/AISLTP/Views/Sp/Index.cshtml
@@ -22,7 +22,7 @@
     </li>
     <li>
         <div class="alert alert-success">
-            <span class="alert-link"> @Html.ActionLink( "Справочник областей" , "Index" , "Sp_obl" )</span>
+            <span class="alert-link"> @Html.ActionLink( "Справочник областей" , "Index" , "Obls" )</span>
         </div>
     </li>
     <li>
